--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
