--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "antd": "^5.15.0",
     "bcrypt": "^5.1.1",
     "braintree": "^3.22.0",
