--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.15.3",
     "axios": "^1.6.7",
     "braintree-web-drop-in-react": "^1.2.1",
+    "framer-motion": "^11.0.28",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
