--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.3",
+    "aos": "^2.3.4",
     "axios": "^1.6.7",
     "braintree-web-drop-in-react": "^1.2.1",
     "framer-motion": "^11.0.28",
