--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^11.0.28",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.486.0",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
